# grasp_pose_generator

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py  vcpkg.json
.github/workflows/: build-and-publish.yml
example/: example.py  output_grasps.txt
include/gpg/: antipodal.h  candidates_generator.h  cloud_camera.h
src/: py_generate_grasp_from_gpg.cpp
src/gpg/: candidates_generator.cpp  cloud_camera.cpp  hand_search.cpp
